File with animations crash (latest builds) #31646

Closed
opened 2012-05-30 13:55:55 +02:00 by paul geraskin · 8 comments
Member

%%%Hi!

File of Blender 2.62 with animations... Latest builds from Graphicall.org cannot open it. Blender crashes.

Tested on linux64 and windows 32.

I attached the blend file and log from win32.

Log from linux 64:
mifth@mifth-3d:~/Documents/blender$ ./blender
connect failed: No such file or directory
ndof: spacenavd not found
found bundled python: /home/mifth/Documents/blender/2.63/python
read blend: /home/mifth/Documents/repository/trunk/characters/fc_characters_source/fc_characters_30_snow_kiy/fc_characters_30_snow_kiy.blend
Segmentation fault
%%%

%%%Hi! File of Blender 2.62 with animations... Latest builds from Graphicall.org cannot open it. Blender crashes. Tested on linux64 and windows 32. I attached the blend file and log from win32. Log from linux 64: mifth@mifth-3d:~/Documents/blender$ ./blender connect failed: No such file or directory ndof: spacenavd not found found bundled python: /home/mifth/Documents/blender/2.63/python read blend: /home/mifth/Documents/repository/trunk/characters/fc_characters_source/fc_characters_30_snow_kiy/fc_characters_30_snow_kiy.blend Segmentation fault %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Win32 log:
http://dl.dropbox.com/u/26887202/blender/3bd2_appcompat.txt

the Blend file:
http://dl.dropbox.com/u/26887202/blender/fc_characters_30_snow_kiy.blend%%%

%%%Win32 log: http://dl.dropbox.com/u/26887202/blender/3bd2_appcompat.txt the Blend file: http://dl.dropbox.com/u/26887202/blender/fc_characters_30_snow_kiy.blend%%%
Author
Member

%%%Another model which can help:

http://dl.dropbox.com/u/26887202/blender/fc_characters_30_snow_kiy_2.blend

Blender 2.63 r47209 does not open it.
http://www.graphicall.org/103%%%

%%%Another model which can help: http://dl.dropbox.com/u/26887202/blender/fc_characters_30_snow_kiy_2.blend Blender 2.63 r47209 does not open it. http://www.graphicall.org/103%%%

%%%Crash in do_versions_nodetree_multi_file_output_format_2_62_1, oldata is NULL somehow.

Lukas, do you have any idea how this can happen? I suppose it's easy enough to avoid the crash, but the real cause is unclear to me.%%%

%%%Crash in do_versions_nodetree_multi_file_output_format_2_62_1, oldata is NULL somehow. Lukas, do you have any idea how this can happen? I suppose it's easy enough to avoid the crash, but the real cause is unclear to me.%%%

%%%Any updates here Lukas? %%%

%%%Any updates here Lukas? %%%
Member

%%%Fixed this in SVN. I have no idea how the file got messed up, but now it should at least load without crashing.

NOTE: you probably have to set the output paths again, sorry for that!%%%

%%%Fixed this in SVN. I have no idea how the file got messed up, but now it should at least load without crashing. NOTE: you probably have to set the output paths again, sorry for that!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%THANK YOU MAN!%%%

%%%THANK YOU MAN!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31646
No description provided.